--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title> levus scroll </title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -19,22 +19,40 @@
       </div>
       <div class="levus-scroll">
         <div class="scroll-item">
-          <img src="https://i.picsum.photos/id/1/200/140.jpg" alt="">
+          <a href="">
+            <img src="https://i.picsum.photos/id/1/200/140.jpg" alt="">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error enim ipsa ab.
+          </a>
         </div>
         <div class="scroll-item">
-          <img src="https://i.picsum.photos/id/2/200/140.jpg" alt="">
+          <a href="">
+            <img src="https://i.picsum.photos/id/2/200/140.jpg" alt="">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur ut voluptas perspiciatis, amet hic magnam labore!
+          </a>
         </div>
         <div class="scroll-item">
-          <img src="https://i.picsum.photos/id/3/200/140.jpg" alt="">
+          <a href="">
+            <img src="https://i.picsum.photos/id/3/200/140.jpg" alt="">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error enim ipsa ab.
+          </a>
         </div>
         <div class="scroll-item">
-          <img src="https://i.picsum.photos/id/4/200/140.jpg" alt="">
+          <a href="">
+            <img src="https://i.picsum.photos/id/4/200/140.jpg" alt="">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error enim ipsa ab.
+          </a>
         </div>
         <div class="scroll-item">
-          <img src="https://i.picsum.photos/id/5/200/140.jpg" alt="">
+          <a href="">
+            <img src="https://i.picsum.photos/id/5/200/140.jpg" alt="">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur ut voluptas perspiciatis, amet hic magnam labore!
+          </a>
         </div>
         <div class="scroll-item">
-          <img src="https://i.picsum.photos/id/6/200/140.jpg" alt="">
+          <a href="">
+            <img src="https://i.picsum.photos/id/6/200/140.jpg" alt="">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error enim ipsa ab.
+          </a>
         </div>
       </div>
     </div>
