--- a/index.html
+++ b/index.html
@@ -20,37 +20,37 @@
       <div class="levus-scroll">
         <div class="scroll-item">
           <a href="">
-            <img src="https://i.picsum.photos/id/1/200/140.jpg" alt="">
+            <img src="images/01.png" alt="">
             L o r e m i p s u m d o l o r s i t, a m e t c o n s e c t e t u r a d i p i s i c i n g e l i t. E r r o r e n i m i p s a a b.
           </a>
         </div>
         <div class="scroll-item">
           <a href="">
-            <img src="https://i.picsum.photos/id/2/200/140.jpg" alt="">
+            <img src="images/02.png" alt="">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur ut voluptas perspiciatis, amet hic magnam labore!
           </a>
         </div>
         <div class="scroll-item">
           <a href="">
-            <img src="https://i.picsum.photos/id/3/200/140.jpg" alt="">
+            <img src="images/03.png" alt="">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error enim ipsa ab.
           </a>
         </div>
         <div class="scroll-item">
           <a href="">
-            <img src="https://i.picsum.photos/id/4/200/140.jpg" alt="">
+            <img src="images/04.png" alt="">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error enim ipsa ab.
           </a>
         </div>
         <div class="scroll-item">
           <a href="">
-            <img src="https://i.picsum.photos/id/5/200/140.jpg" alt="">
+            <img src="images/05.png" alt="">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur ut voluptas perspiciatis, amet hic magnam labore!
           </a>
         </div>
         <div class="scroll-item">
           <a href="">
-            <img src="https://i.picsum.photos/id/6/200/140.jpg" alt="">
+            <img src="images/06.png" alt="">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error enim ipsa ab.
           </a>
         </div>
