--- a/index.html
+++ b/index.html
@@ -57,6 +57,53 @@
       </div>
     </div>
 
+    <hr>
+
+    <div class="levus-scroll-wrapper-2">
+      <div class="levus-scroll-nav">
+        <span class="left"></span>
+        <span class="right"></span>
+      </div>
+      <div class="levus-scroll">
+        <div class="scroll-item">
+          <a href="">
+            <img src="images/01.png" alt="">
+            L o r e m i p s u m d o l o r s i t, a m e t c o n s e c t e t u r a d i p i s i c i n g e l i t. E r r o r e n i m i p s a a b.
+          </a>
+        </div>
+        <div class="scroll-item">
+          <a href="">
+            <img src="images/02.png" alt="">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur ut voluptas perspiciatis, amet hic magnam labore!
+          </a>
+        </div>
+        <div class="scroll-item">
+          <a href="">
+            <img src="images/03.png" alt="">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error enim ipsa ab.
+          </a>
+        </div>
+        <div class="scroll-item">
+          <a href="">
+            <img src="images/04.png" alt="">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error enim ipsa ab.
+          </a>
+        </div>
+        <div class="scroll-item">
+          <a href="">
+            <img src="images/05.png" alt="">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur ut voluptas perspiciatis, amet hic magnam labore!
+          </a>
+        </div>
+        <div class="scroll-item">
+          <a href="">
+            <img src="images/06.png" alt="">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error enim ipsa ab.
+          </a>
+        </div>
+      </div>
+    </div>
+
   </div>
   <!-- #example -->
 
