--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   </div>
   <!-- #example -->
 
-  <script src="js/levus-scroll.js"></script>
+  <script src="js/levus-scroll.min.js"></script>
 </body>
 
 </html>
