--- a/index.html
+++ b/index.html
@@ -2,112 +2,100 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> levus scroll </title>
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> levus scroll </title>
+    <link rel="stylesheet" href="css/levus-scroll.css">
 </head>
 
 <body>
 
-  <div id="example">
+    <div id="example">
 
-    <div class="levus-scroll-wrapper">
-      <div class="levus-scroll-nav">
-        <span class="left"></span>
-        <span class="right"></span>
-      </div>
-      <div class="levus-scroll">
-        <div class="scroll-item">
-          <a href="">
-            <img src="https://via.placeholder.com/525x300.png" alt="">
-            L o r e m i p s u m d o l o r s i t, a m e t c o n s e c t e t u r a d i p i s i c i n g e l i t. E r r o r e n i m i p s a a b.
-          </a>
+        <div class="levus-scroll-wrapper">
+            <div class="levus-scroll-nav">
+                <span class="left"></span>
+                <span class="right"></span>
+            </div>
+            <div class="levus-scroll">
+                <div class="scroll-item">
+                    <a href="">
+                        <img src="https://via.placeholder.com/525x300.png" alt=""> L o r e m i p s u m d o l o r s i t, a m e t c o n s e c t e t u r a d i p i s i c i n g e l i t. E r r o r e n i m i p s a a b.
+                    </a>
+                </div>
+                <div class="scroll-item">
+                    <a href="">
+                        <img src="https://via.placeholder.com/525x300.png" alt=""> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur ut voluptas perspiciatis, amet hic magnam labore!
+                    </a>
+                </div>
+                <div class="scroll-item">
+                    <a href="">
+                        <img src="https://via.placeholder.com/525x300.png" alt=""> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error enim ipsa ab.
+                    </a>
+                </div>
+                <div class="scroll-item">
+                    <a href="">
+                        <img src="https://via.placeholder.com/525x300.png" alt=""> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error enim ipsa ab.
+                    </a>
+                </div>
+                <div class="scroll-item">
+                    <a href="">
+                        <img src="https://via.placeholder.com/525x300.png" alt=""> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur ut voluptas perspiciatis, amet hic magnam labore!
+                    </a>
+                </div>
+                <div class="scroll-item">
+                    <a href="">
+                        <img src="https://via.placeholder.com/525x300.png" alt=""> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error enim ipsa ab.
+                    </a>
+                </div>
+            </div>
         </div>
-        <div class="scroll-item">
-          <a href="">
-            <img src="https://via.placeholder.com/525x300.png" alt="">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur ut voluptas perspiciatis, amet hic magnam labore!
-          </a>
+
+        <hr>
+
+        <div class="levus-scroll-wrapper-2">
+            <div class="levus-scroll-nav">
+                <span class="left"></span>
+                <span class="right"></span>
+            </div>
+            <div class="levus-scroll">
+                <div class="scroll-item">
+                    <a href="">
+                        <img src="https://via.placeholder.com/525x300.png" alt=""> L o r e m i p s u m d o l o r s i t, a m e t c o n s e c t e t u r a d i p i s i c i n g e l i t. E r r o r e n i m i p s a a b.
+                    </a>
+                </div>
+                <div class="scroll-item">
+                    <a href="">
+                        <img src="https://via.placeholder.com/525x300.png" alt=""> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur ut voluptas perspiciatis, amet hic magnam labore!
+                    </a>
+                </div>
+                <div class="scroll-item">
+                    <a href="">
+                        <img src="https://via.placeholder.com/525x300.png" alt=""> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error enim ipsa ab.
+                    </a>
+                </div>
+                <div class="scroll-item">
+                    <a href="">
+                        <img src="https://via.placeholder.com/525x300.png" alt=""> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error enim ipsa ab.
+                    </a>
+                </div>
+                <div class="scroll-item">
+                    <a href="">
+                        <img src="https://via.placeholder.com/525x300.png" alt=""> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur ut voluptas perspiciatis, amet hic magnam labore!
+                    </a>
+                </div>
+                <div class="scroll-item">
+                    <a href="">
+                        <img src="https://via.placeholder.com/525x300.png" alt=""> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error enim ipsa ab.
+                    </a>
+                </div>
+            </div>
         </div>
-        <div class="scroll-item">
-          <a href="">
-            <img src="https://via.placeholder.com/525x300.png" alt="">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error enim ipsa ab.
-          </a>
-        </div>
-        <div class="scroll-item">
-          <a href="">
-            <img src="https://via.placeholder.com/525x300.png" alt="">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error enim ipsa ab.
-          </a>
-        </div>
-        <div class="scroll-item">
-          <a href="">
-            <img src="https://via.placeholder.com/525x300.png" alt="">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur ut voluptas perspiciatis, amet hic magnam labore!
-          </a>
-        </div>
-        <div class="scroll-item">
-          <a href="">
-            <img src="https://via.placeholder.com/525x300.png" alt="">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error enim ipsa ab.
-          </a>
-        </div>
-      </div>
+
     </div>
+    <!-- #example -->
 
-    <hr>
-
-    <div class="levus-scroll-wrapper-2">
-      <div class="levus-scroll-nav">
-        <span class="left"></span>
-        <span class="right"></span>
-      </div>
-      <div class="levus-scroll">
-        <div class="scroll-item">
-          <a href="">
-            <img src="https://via.placeholder.com/525x300.png" alt="">
-            L o r e m i p s u m d o l o r s i t, a m e t c o n s e c t e t u r a d i p i s i c i n g e l i t. E r r o r e n i m i p s a a b.
-          </a>
-        </div>
-        <div class="scroll-item">
-          <a href="">
-            <img src="https://via.placeholder.com/525x300.png" alt="">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur ut voluptas perspiciatis, amet hic magnam labore!
-          </a>
-        </div>
-        <div class="scroll-item">
-          <a href="">
-            <img src="https://via.placeholder.com/525x300.png" alt="">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error enim ipsa ab.
-          </a>
-        </div>
-        <div class="scroll-item">
-          <a href="">
-            <img src="https://via.placeholder.com/525x300.png" alt="">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error enim ipsa ab.
-          </a>
-        </div>
-        <div class="scroll-item">
-          <a href="">
-            <img src="https://via.placeholder.com/525x300.png" alt="">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur ut voluptas perspiciatis, amet hic magnam labore!
-          </a>
-        </div>
-        <div class="scroll-item">
-          <a href="">
-            <img src="https://via.placeholder.com/525x300.png" alt="">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error enim ipsa ab.
-          </a>
-        </div>
-      </div>
-    </div>
-
-  </div>
-  <!-- #example -->
-
-  <script src="js/levus-scroll.js"></script>
+    <script src="js/levus-scroll.js"></script>
 </body>
 
 </html>
